Learning how to use Webpack with a config file

--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8"/>
-        <title>webpack</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Task_1</title>
     </head>
     <body>
         <script src="./bundle.js"></script>
